# torch-dcr

./: README.md  pyproject.toml
.github/workflows/: cd.yml
examples/: readme_example.py
tests/: test_dcr.py
torch_dcr/: dcr.py
